<resources>
    <string name="app_name">Calculator</string>
    <string name="heading">Calculator</string>
    <string name="request">Please enter the numbers and chose the operation</string>
    <string name="firstNumber">   </string>
    <string name="secondNumber">   </string>
    <string name="sign">  </string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="result">   </string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="previous_operation">Previous operation: %s %s %s = %s</string>
</resources>